# SmolOsc

./: .gitignore  Kinetics.ipynb  README.md  WORKSPACE  experiment.py  experiments.py  kernels.py  plotting.py  requirements.txt  run_experiment.py  simulation.h  simulation.py  simulation_cuda.py  util.py
FDMCS/: BUILD.bazel  io_util.h  simulation.cc  simulation.h  simulation.proto  simulation_benchmark.cc  simulation_main.cc  simulation_test.cc
FDMCS/config/: ballistic_1000.json  ballistic_10000.json  ballistic_100000.json  ballistic_1000000.json  brownian_osc_1000.json  brownian_osc_10000.json  brownian_osc_100000.json  brownian_osc_1000000.json  brownian_osc_1000000_stable_lambda.json  brownian_osc_large_pow_1000.json  brownian_osc_large_pow_10000.json  brownian_osc_large_pow_100000.json  brownian_osc_large_pow_1000000.json  constant.json  constant_1000.json  constant_10000.json  constant_100000.json  constant_1000000.json  constant_100000_load.json
FDMCS/plotting/: data_loader.py  generate_results.py  plotting.py
NewtonKrylov/: krylov_jacobian.cpp  krylov_jacobian.h  newton_krylov.cpp  newton_krylov.h  types.h
NewtonKrylov/bindings/: bindings.cpp  (+1 more)
cc/: main.cc  simulation.cc
config/: ballistic_5000.yaml  constant_32767.yaml  cuda_test.yaml  decay_45000.yaml  decay_45000_logistic.yaml  decay_45000_steep.yaml  decay_test.yaml  full.yaml  initialized_0005.yaml  test_brownian.yaml  test_brownian_be.yaml  test_brownian_be_cpp.yaml  test_small.yaml
olddata/: res_15000_a=0.1_dt=0.005_l=0.005.npy  solution_32768_alpha=0.1.npy  solution_32768_alpha=0.1_norm.npy
