load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
  name = "simulation_lib",
  srcs = ["simulation.cc"],
  hdrs = ["simulation.h"]
)


cc_test(
  name = "simulation_test",
  srcs = ["simulation_test.cc"],
  size = "small",
  deps = [
    ":simulation_lib",
    "@com_google_googletest//:gtest_main",
  ]
)

cc_library(
  name = "io_util",
  hdrs = ["io_util.h"],
  deps = [":simulation_lib"]
)

cc_binary(
  name = "simulation_benchmark",
  srcs = ["simulation_benchmark.cc"],
  deps = [
    ":simulation_lib",
  ]
)


cc_binary(
  name = "simulation_main",
  srcs = ["simulation_main.cc"],
  deps = [
    ":simulation_lib",
    ":simulation_cc_proto",
    ":io_util",
  ],
  linkopts = ["-lstdc++fs"]
)

proto_library(
    name = "simulation_proto",
    srcs = ["simulation.proto"],
)

cc_proto_library(
    name = "simulation_cc_proto",
    deps = [":simulation_proto"],
)
